# batch-susceptibility

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
batch_susceptibility/: __init__.py  cli.py  core.py  lightning.py  plot.py  pytorch.py  tensorflow.py
examples/: generic_csv.py  huggingface_transformers.py  pytorch_cifar10.py  pytorch_monitor.py  tensorflow_mnist.py
tests/: __init__.py  test_core.py
